# spine-runtimes

spine-c/: CMakeLists.txt
spine-cpp/: CMakeLists.txt
